--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,7 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+
 import '../styles/global.css';
 
 const pageTitle = "About Me";
@@ -44,9 +47,7 @@ const textCase = "uppercase";
 	<body>
 		<body>
 
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-            <a href="/blog/">Blog</a>
+            <Navigation />
 
             <h1>{pageTitle}</h1>
             <h2>... and my new Astro site!</h2>
@@ -76,5 +77,6 @@ const textCase = "uppercase";
                 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
             </p>
           </body>
+        <Footer />
 	</body>
 </html>
