--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
@@ -47,7 +47,7 @@ const textCase = "uppercase";
 	<body>
 		<body>
 
-            <Navigation />
+            <Header />
 
             <h1>{pageTitle}</h1>
             <h2>... and my new Astro site!</h2>
@@ -78,5 +78,8 @@ const textCase = "uppercase";
             </p>
           </body>
         <Footer />
+        <script>
+            import "../scripts/menu.js";
+        </script>
 	</body>
 </html>
