--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
@@ -16,7 +16,7 @@ const pageTitle = "My Astro Learning Blog";
 		<title>Astro</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 
 		<h1>My Astro Learning Blog</h1>
         
@@ -28,5 +28,8 @@ const pageTitle = "My Astro Learning Blog";
             <li><a href="/posts/post-3/">Post 3</a></li>
         </ul>
         <Footer />
+        <script>
+            import "../scripts/menu.js";
+        </script>
 	</body>
 </html>
